trying to make it work on forge 1.20.1 not a bug success when compiling the mod with work when launching with the ide ;_;